I added some snazzz

--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -8,10 +8,23 @@
 	</style>
 	
 	<body>
+	
+	<style tpe="text/css">
+		body {
+			background:#eee;
+			font-family:Helvetica, Arial, sans-serif;
+		}
+		h2, h3 {
+			font-size:22px;
+			font-weight:300;
+			color:#aaa;
+			border:1px solid #aaa;
+		}
+	</style>
 	 		<h2>Rio Akasaka</h2>
 		<div id='bio'>Crime-solver. Noir detective extraordinaire.</div>
 	 
-	 	<h3>Assignments</h3>
+	 	<h3>CHUNDAAA</h3>
 		<ul id='assignments'>
 			<li>Go undercover</li>
 			<li>Learn HTML</li>
