with '#' will be ignored, and an empty message aborts the commit. message

--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -11,18 +11,38 @@
 	
 	<style tpe="text/css">
 		body {
-			background:#eee;
+			background:#909090;
 			font-family:Helvetica, Arial, sans-serif;
 		}
 		h2, h3 {
 			font-size:22px;
 			font-weight:300;
-			color:#aaa;
+			color:#000000;
 			border:1px solid #aaa;
+		}
+		.opacity {
+			opacity:0.5;
+		}
+		.button{
+			background:#333;
+			width:100px;
+			color:#fff;
+			height:20px;
+		     -moz-border-radius: 20px;
+		    -webkit-border-radius: 20px;
+		    -khtml-border-radius: 20px;
+		    border-radius: 20px;
+		    text-align:center;
 		}
 	</style>
 	 		<h2>Rio Akasaka</h2>
 		<div id='bio'>Crime-solver. Noir detective extraordinaire.</div>
+	 
+	 		<link rel="apple-touch-icon" href="appicon.png" />
+		<link rel="apple-touch-startup-image" href="startup.png">
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-webapp-status-bar-style" content="green" />
+		<meta name="viewport" content="width=device-width, user-scalable=no" />
 	 
 	 	<h3>CHUNDAAA</h3>
 		<ul id='assignments'>
@@ -30,7 +50,15 @@
 			<li>Learn HTML</li>
 		</ul>
 	
+	<p><img width="50" class="opacity" src="seal.png" /> </p>
+	
+	<video width="300" height="240" controls="controls">
+		  <source src="gizmo.mp4" type="video/mp4" />
+		</video>
+	
 		<h3>A nice button</h3>
+		
+		<div class="button">Click me</div>
 
 		<h3>An invisible seal</h3>
 
